--- a/groups/dyuganga/internal/onboarding/index.html
+++ b/groups/dyuganga/internal/onboarding/index.html
@@ -203,7 +203,7 @@
 <h3 id="repositories">Repositories</h3>
 <ul>
 <li><a href="https://github.com/vvasuki/saMskAra/">संस्कारः</a> - Fork and clone.</li>
-<li><a href="https://github.com/vvasuki/kAvya/">काव्यम्</a> - Fork and clone.</li>
+<li><a href="https://github.com/vvasuki/kAvyam/">काव्यम्</a> - Fork and clone.</li>
 <li><a href="https://github.com/sanskrit/raw_etexts/">Raw etexts</a> - clone.</li>
 </ul>
 <h3 id="सङगणकतनतरश-linux">सङ्गणकतन्त्रांशाः (Linux)</h3>
@@ -272,7 +272,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2020 Nov 24 06:47:21 UTC. (<a href="http://google.com/search?q=06%3a47%3a21%20UTC to IST">IST</a>)
+      Built on 2020 Dec 19 05:50:50 UTC. (<a href="http://google.com/search?q=05%3a50%3a50%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
