deploy: eb9a74a0f4e98886e622e2c82681d2f9b771eea9

--- a/groups/dyuganga/contact/index.html
+++ b/groups/dyuganga/contact/index.html
@@ -19,20 +19,20 @@
     <link href="/groups/dyuganga/contact/" rel="feed" type="application/rss+xml" title="संस्कृतजालक्षेत्रम्" />
 
     <meta property="og:title" content="Contact सम्पर्कः" />
-<meta property="og:description" content=" Get updates here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र। Please contact Vishvas / विश्वासो वासुकिजः for more info. We are located in C Block, sahakAra nagara.   " />
+<meta property="og:description" content=" Get updates here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र। Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page. We are located in C Block, sahakAra nagara.   " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/contact/" />
 
 <meta itemprop="name" content="Contact सम्पर्कः">
-<meta itemprop="description" content=" Get updates here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र। Please contact Vishvas / विश्वासो वासुकिजः for more info. We are located in C Block, sahakAra nagara.   ">
+<meta itemprop="description" content=" Get updates here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र। Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page. We are located in C Block, sahakAra nagara.   ">
 
-<meta itemprop="wordCount" content="23">
+<meta itemprop="wordCount" content="30">
 
 
 
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Contact सम्पर्कः"/>
-<meta name="twitter:description" content=" Get updates here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र। Please contact Vishvas / विश्वासो वासुकिजः for more info. We are located in C Block, sahakAra nagara.   "/>
+<meta name="twitter:description" content=" Get updates here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र। Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page. We are located in C Block, sahakAra nagara.   "/>
 
       
     
@@ -184,7 +184,7 @@
   <div id="post_content">
   <ul>
 <li>Get updates <a href="https://groups.google.com/forum/#!forum/dyuganga">here</a>. द्युगङ्गा-कार्यगणस्य वार्ता <a href="https://groups.google.com/forum/#!forum/dyuganga">अत्र</a>।</li>
-<li>Please contact <a href="https://vvasuki.github.io/">Vishvas / विश्वासो वासुकिजः</a> for more info.</li>
+<li>Please contact <a href="https://vvasuki.github.io/">Vishvas / विश्वासो वासुकिजः</a> for more info. Especially, please see <a href="https://vvasuki.github.io/interests/dharma-via-vishvas/">Dharma via Vishvas page</a>.</li>
 <li>We are located in <a href="https://goo.gl/maps/QrXL5uobRpCgW1W7A">C Block, sahakAra nagara</a>.</li>
 </ul>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.5696120107723!2d77.57570845064947!3d13.06304481635385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae199b187665f9%3A0x6e39c56a59ff6376!2sDyugang%C4%81%20%3A%20Sanskrit%20classics%20represented!5e0!3m2!1sen!2sin!4v1580705356323!5m2!1sen!2sin" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
@@ -225,7 +225,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Jan 1 03:07:47 UTC. (<a href="http://google.com/search?q=03%3a07%3a47%20UTC to IST">IST</a>)
+      Built on 2021 Jan 9 03:09:21 UTC. (<a href="http://google.com/search?q=03%3a09%3a21%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
