--- a/people/i_narasimhaachaarya/index.html
+++ b/people/i_narasimhaachaarya/index.html
@@ -183,7 +183,7 @@
 <p>&ldquo;सङ्गणकचालनं जानामि। मम अर्हताः एवं सन्ति &ndash; एम्.ए.(तेलुगु), अत्र कर्णाटभाषा ऐच्छिकी। २.आन्ध्रविश्वविद्यालयस्य &ldquo;न्यायविद्याप्रवीणोऽयम्&ndash; शैशवाद्विश्वविद्यालयावधि संस्कृतमधीत्य लब्धेयमर्हता। संस्कृते एम्.ए. तुल्येति परिगणिता प्रभुत्वेन। भाषाशास्त्रं स्वीकृत्य पि.ओ.एल्. डिप्लमो अपि आन्ध्रविश्वविद्यालयतः लब्धवानयम्। एम्.इडि. इति स्नातकोत्तरार्हताप्यस्ति। भाषाप्रवीण इति तेलुगु ओरियन्टल् टैटल् अर्हताप्यस्ति। उन्नतपाठशालातः कलाशालापर्यन्तं आन्ध्रप्रभुत्वविद्याशाखायां उद्योगमपि कृतवान्। सर्वमतीत्य उत्साहोऽस्ति।&rdquo;</p>
 <p>प्राचीन-पत्त्राणि - <a href="http://groups.google.com/forum/#!forum/shishupalavadha-ign">mailing list</a>।</p>
 <h2 id="पठनवधनम">पठनविधानम्</h2>
-<p>क्रमो मेऽयं रोचते श्लोकव्याख्यानपठने - प्रथमं श्लोकस्य पठनम्, पश्चात् साक्षात् तात्पर्यस्य पठनम्, ततः पदच्छेद-प्रतिपदार्थयोः पठनं यथापेक्षितम्, पश्चाद् विशेषटिप्पणिपठनम्।</p>
+<p>क्रमो मेऽयं रोचते श्लोकव्याख्यानपठने - प्रथमं श्लोकस्य पठनम्, पश्चात् साक्षात् तात्पर्यस्य पठनम्, ततः पदच्छेद-प्रतिपदार्थयोः पठनं यथापेक्षितम्, पश्चाद् विशेषटिप्पनीपठनम्।</p>
 
   </div>
 </article>
@@ -848,7 +848,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Feb 1 05:01:47 UTC. (<a href="http://google.com/search?q=05%3a01%3a47%20UTC to IST">IST</a>)
+      Built on 2021 Feb 18 05:29:00 UTC. (<a href="http://google.com/search?q=05%3a29%3a00%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
