--- a/groups/dyuganga/index.html
+++ b/groups/dyuganga/index.html
@@ -203,7 +203,7 @@
 <p>ग्रन्थानाम् प्रस्तुतिर् ध्वनिसञ्चिकाभिस् स्यात् (यथा <a href="../../projects/audio/mbh-audio/">महाभारतपारायणप्रसारणे</a>), जालक्षेत्रपृष्ठैर् वा (यथा <a href="https://vvasuki.github.io/saMskAra/mantra/agniH/paravastu-saama/mahAvaishvAnara-vratam/">विश्वासस्य मन्त्रटिप्पनीषु</a>, <a href="https://sa.wikisource.org/s/1vnh">एकाग्निकाण्डटीकापृष्ठे विकिस्रोतसि</a>), शब्दकोशैर् वाऽपि (<a href="https://sanskrit-coders.github.io/dictionaries/offline/">stardict</a>)।</p>
 <p>सद्यश्च ग्रन्थाः संस्थाग्रण्या रुचिविशेषम् अनुसृत्य चिताः - वेदाः, इतिहासपुराणानि, कल्पवेदाङ्गग्रन्थाश् चेति।</p>
 <h2 id="establishment-ससथपनम">Establishment संस्थापनम्</h2>
-<p>The group started in Feb 2020. It was hosted for a couple of months before the Wuhan pandemic under the aegis of shrI manjunath&rsquo;s <a href="http://cleverkare.com">Cleverkare</a>, an entirely unrelated business. Since then it has been running on Vasuki family funds. Donations and sponsorship are welcome (use <a href="contact/">contact page</a>) - they help offset operating costs (worker payments mainly ~1L/mo) and plan further projects.</p>
+<p>The group started in Feb 2020. It was hosted for a couple of months before the Wuhan pandemic under the aegis of shrI manjunath&rsquo;s <a href="http://cleverkare.com">Cleverkare</a>, an entirely unrelated business. Since then it has been running on Vishvas family funds. Donations and sponsorship are welcome (use <a href="contact/">contact page</a>) - they help offset operating costs (worker payments mainly ~1L/mo) and plan further projects.</p>
 
   </div>
 </article>
@@ -452,7 +452,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Mar 20 07:02:34 UTC. (<a href="http://google.com/search?q=07%3a02%3a34%20UTC to IST">IST</a>)
+      Built on 2021 Apr 3 04:01:25 UTC. (<a href="http://google.com/search?q=04%3a01%3a25%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
