deploy: 0bbacbf40583e0838e4ec0f2bfccc8e5f9d9f758

--- a/groups/dyuganga/members/index.html
+++ b/groups/dyuganga/members/index.html
@@ -19,20 +19,20 @@
     <link href="/groups/dyuganga/members/" rel="feed" type="application/rss+xml" title="संस्कृतजालक्षेत्रम्" />
 
     <meta property="og:title" content="Team गणः" />
-<meta property="og:description" content=" Vishvas / विश्वासो वासुकिजः, Lead/ अग्रणीः Pradeepasimha/ प्रदीपसिंहाचार्यः, Scholar assistant/ विद्वन्मन्त्री Kishor Sharma/ किशोरशर्मा, Scholar assistant/ विद्वन्मन्त्री You?, Junior Scholar assistant/ उपविद्वन्मन्त्री  Former members  Sanjeeva/ सञ्जीवः, Junior Scholar assistant/ उपविद्वन्मन्त्री  " />
+<meta property="og:description" content=" Vishvas / विश्वासो वासुकिजः, Lead/ अग्रणीः  Apart from dyugangA activity, he also contributes to free open source software useful for Hindu practitioners, scholars and students - see various repos under orgs such as sanskrit-programmers, jyotisha, indic-dict etc. (Full list under github profile).   Pradeepasimha/ प्रदीपसिंहाचार्यः, Scholar assistant/ विद्वन्मन्त्री Kishor Sharma/ किशोरशर्मा, Scholar assistant/ विद्वन्मन्त्री You?, Junior Scholar assistant/ उपविद्वन्मन्त्री  Former members  Sanjeeva/ सञ्जीवः, Junior Scholar assistant/ उपविद्वन्मन्त्री  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/members/" />
 
 <meta itemprop="name" content="Team गणः">
-<meta itemprop="description" content=" Vishvas / विश्वासो वासुकिजः, Lead/ अग्रणीः Pradeepasimha/ प्रदीपसिंहाचार्यः, Scholar assistant/ विद्वन्मन्त्री Kishor Sharma/ किशोरशर्मा, Scholar assistant/ विद्वन्मन्त्री You?, Junior Scholar assistant/ उपविद्वन्मन्त्री  Former members  Sanjeeva/ सञ्जीवः, Junior Scholar assistant/ उपविद्वन्मन्त्री  ">
+<meta itemprop="description" content=" Vishvas / विश्वासो वासुकिजः, Lead/ अग्रणीः  Apart from dyugangA activity, he also contributes to free open source software useful for Hindu practitioners, scholars and students - see various repos under orgs such as sanskrit-programmers, jyotisha, indic-dict etc. (Full list under github profile).   Pradeepasimha/ प्रदीपसिंहाचार्यः, Scholar assistant/ विद्वन्मन्त्री Kishor Sharma/ किशोरशर्मा, Scholar assistant/ विद्वन्मन्त्री You?, Junior Scholar assistant/ उपविद्वन्मन्त्री  Former members  Sanjeeva/ सञ्जीवः, Junior Scholar assistant/ उपविद्वन्मन्त्री  ">
 
-<meta itemprop="wordCount" content="30">
+<meta itemprop="wordCount" content="66">
 
 
 
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Team गणः"/>
-<meta name="twitter:description" content=" Vishvas / विश्वासो वासुकिजः, Lead/ अग्रणीः Pradeepasimha/ प्रदीपसिंहाचार्यः, Scholar assistant/ विद्वन्मन्त्री Kishor Sharma/ किशोरशर्मा, Scholar assistant/ विद्वन्मन्त्री You?, Junior Scholar assistant/ उपविद्वन्मन्त्री  Former members  Sanjeeva/ सञ्जीवः, Junior Scholar assistant/ उपविद्वन्मन्त्री  "/>
+<meta name="twitter:description" content=" Vishvas / विश्वासो वासुकिजः, Lead/ अग्रणीः  Apart from dyugangA activity, he also contributes to free open source software useful for Hindu practitioners, scholars and students - see various repos under orgs such as sanskrit-programmers, jyotisha, indic-dict etc. (Full list under github profile).   Pradeepasimha/ प्रदीपसिंहाचार्यः, Scholar assistant/ विद्वन्मन्त्री Kishor Sharma/ किशोरशर्मा, Scholar assistant/ विद्वन्मन्त्री You?, Junior Scholar assistant/ उपविद्वन्मन्त्री  Former members  Sanjeeva/ सञ्जीवः, Junior Scholar assistant/ उपविद्वन्मन्त्री  "/>
 
       
     
@@ -183,7 +183,11 @@
   </aside>
   <div id="post_content">
   <ul>
-<li><a href="https://vvasuki.github.io/">Vishvas / विश्वासो वासुकिजः</a>, Lead/ अग्रणीः</li>
+<li><a href="https://vvasuki.github.io/">Vishvas / विश्वासो वासुकिजः</a>, Lead/ अग्रणीः
+<ul>
+<li>Apart from dyugangA activity, he also contributes to free open source software useful for Hindu practitioners, scholars and students - see various repos under orgs such as <a href="https://github.com/sanskrit-coders/">sanskrit-programmers</a>, <a href="https://github.com/jyotiSham/">jyotisha</a>, <a href="https://github.com/indic-dict/">indic-dict</a> etc. (Full list under github <a href="https://github.com/vvasuki/">profile</a>).</li>
+</ul>
+</li>
 <li><a href="../../../people/pradeepasimha/">Pradeepasimha/ प्रदीपसिंहाचार्यः</a>, Scholar assistant/ विद्वन्मन्त्री</li>
 <li><a href="../../../people/kishorsharma/">Kishor Sharma/ किशोरशर्मा</a>, Scholar assistant/ विद्वन्मन्त्री</li>
 <li><a href="../contact/">You?</a>, Junior Scholar assistant/ उपविद्वन्मन्त्री</li>
@@ -229,7 +233,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Apr 4 03:03:48 UTC. (<a href="http://google.com/search?q=03%3a03%3a48%20UTC to IST">IST</a>)
+      Built on 2021 Apr 4 03:08:34 UTC. (<a href="http://google.com/search?q=03%3a08%3a34%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
