deploy: 7e844bbcab43005cd96db73c86de5713f7f6be5f

--- a/groups/dyuganga/contact/index.html
+++ b/groups/dyuganga/contact/index.html
@@ -19,20 +19,20 @@
     <link href="/groups/dyuganga/contact/" rel="feed" type="application/rss+xml" title="संस्कृतजालक्षेत्रम्" />
 
     <meta property="og:title" content="Contact सम्पर्कः" />
-<meta property="og:description" content=" Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   " />
+<meta property="og:description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/contact/" />
 
 <meta itemprop="name" content="Contact सम्पर्कः">
-<meta itemprop="description" content=" Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   ">
+<meta itemprop="description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   ">
 
-<meta itemprop="wordCount" content="46">
+<meta itemprop="wordCount" content="49">
 
 
 
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Contact सम्पर्कः"/>
-<meta name="twitter:description" content=" Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   "/>
+<meta name="twitter:description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   "/>
 
       
     
@@ -183,6 +183,7 @@
   </aside>
   <div id="post_content">
   <ul>
+<li>Short URL: <a href="https://rebrand.ly/dyugangA">https://rebrand.ly/dyugangA</a></li>
 <li>Please contact <a href="https://vvasuki.github.io/">Vishvas / विश्वासो वासुकिजः</a> for more info. Especially, please see <a href="https://vvasuki.github.io/interests/dharma-via-vishvas/">Dharma via Vishvas page</a>.</li>
 </ul>
 <h2 id="social-web-updates-and-sponsorship-opportunities">Social web (Updates and sponsorship opportunities)</h2>
@@ -234,7 +235,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Apr 4 03:16:32 UTC. (<a href="http://google.com/search?q=03%3a16%3a32%20UTC to IST">IST</a>)
+      Built on 2021 Apr 4 03:22:54 UTC. (<a href="http://google.com/search?q=03%3a22%3a54%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
