deploy: 6677e122fc90d082204ad7355f38a5260118d4b8

--- a/groups/dyuganga/internal/holidays/index.html
+++ b/groups/dyuganga/internal/holidays/index.html
@@ -19,20 +19,20 @@
     <link href="/groups/dyuganga/internal/holidays/" rel="feed" type="application/rss+xml" title="संस्कृतजालक्षेत्रम्" />
 
     <meta property="og:title" content="विरामदिनानि" />
-<meta property="og:description" content="कार्यदिनसूचना Attendance  jibble - आमन्त्रणम् प्रेषयिष्यते। app तन्त्रांशो ऽपि वर्तते।  कार्यवेला/ Work days  सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।  विरामदिनानि/ Paid leaves  सप्ताहे २ दिनय् इति मानेन सप्ताहान्तदिनानि सङ्गृह्य युगपदेव विरामदिनानि भोक्तुं शक्यते (अनेन &#43;एकादश्यादिव्रताचरणे ग्रामयात्रायाञ्च सौकर्यं स्यादिति धीः)। किञ्च, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। एतदन्तरा प्रतिमासं दिनमेकम् इति मानेन विरामदिनानि लभ्यन्ते। तानि सङ्गृह्य भोक्तुं शक्यम्। अथवा धनाय विक्रेतुम् अपि शक्यम्। किन्तु, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। भुज्यमानेषु सङ्गृहीत-विरामदिनेषु प्राक्सूचना देया, विपत्रेण चानुज्ञा लब्धव्या। एतदन्तरा &#43;एतेषूत्सवदिनेषु सप्ताहान्तादन्तरा वर्तमानेषु विरामदिनानि दीयन्ते, प्रत्युत्सवम् एकम् इति मानेन - दीपावलिः, नवरात्रि, गणेशोत्सवः। अन्येषूत्सवेषु विरामिदिनानि यथापेक्षं गृह्याणि - यतो जने जने प्रियोत्सवो भिन्नः।  " />
+<meta property="og:description" content="कार्यदिनसूचना Attendance  jibble - आमन्त्रणम् प्रेषयिष्यते। app तन्त्रांशो ऽपि वर्तते। प्रतिहोरम् इयद् इति कालमानेन वेतनं निश्चिनुमः प्रतिमासम्।  कार्यवेला/ Work days  साधारणापेक्षा - सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।  विरामदिनानि (अवर्तमान-व्यवस्था)/ Paid leaves (Inactive policy)  सप्ताहे २ दिनय् इति मानेन सप्ताहान्तदिनानि सङ्गृह्य युगपदेव विरामदिनानि भोक्तुं शक्यते (अनेन &#43;एकादश्यादिव्रताचरणे ग्रामयात्रायाञ्च सौकर्यं स्यादिति धीः)। किञ्च, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। एतदन्तरा प्रतिमासं दिनमेकम् इति मानेन विरामदिनानि लभ्यन्ते। तानि सङ्गृह्य भोक्तुं शक्यम्। अथवा धनाय विक्रेतुम् अपि शक्यम्। किन्तु, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। भुज्यमानेषु सङ्गृहीत-विरामदिनेषु प्राक्सूचना देया, विपत्रेण चानुज्ञा लब्धव्या। एतदन्तरा &#43;एतेषूत्सवदिनेषु सप्ताहान्तादन्तरा वर्तमानेषु विरामदिनानि दीयन्ते, प्रत्युत्सवम् एकम् इति मानेन - दीपावलिः, नवरात्रि, गणेशोत्सवः। अन्येषूत्सवेषु विरामिदिनानि यथापेक्षं गृह्याणि - यतो जने जने प्रियोत्सवो भिन्नः।  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/internal/holidays/" />
 
 <meta itemprop="name" content="विरामदिनानि">
-<meta itemprop="description" content="कार्यदिनसूचना Attendance  jibble - आमन्त्रणम् प्रेषयिष्यते। app तन्त्रांशो ऽपि वर्तते।  कार्यवेला/ Work days  सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।  विरामदिनानि/ Paid leaves  सप्ताहे २ दिनय् इति मानेन सप्ताहान्तदिनानि सङ्गृह्य युगपदेव विरामदिनानि भोक्तुं शक्यते (अनेन &#43;एकादश्यादिव्रताचरणे ग्रामयात्रायाञ्च सौकर्यं स्यादिति धीः)। किञ्च, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। एतदन्तरा प्रतिमासं दिनमेकम् इति मानेन विरामदिनानि लभ्यन्ते। तानि सङ्गृह्य भोक्तुं शक्यम्। अथवा धनाय विक्रेतुम् अपि शक्यम्। किन्तु, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। भुज्यमानेषु सङ्गृहीत-विरामदिनेषु प्राक्सूचना देया, विपत्रेण चानुज्ञा लब्धव्या। एतदन्तरा &#43;एतेषूत्सवदिनेषु सप्ताहान्तादन्तरा वर्तमानेषु विरामदिनानि दीयन्ते, प्रत्युत्सवम् एकम् इति मानेन - दीपावलिः, नवरात्रि, गणेशोत्सवः। अन्येषूत्सवेषु विरामिदिनानि यथापेक्षं गृह्याणि - यतो जने जने प्रियोत्सवो भिन्नः।  ">
+<meta itemprop="description" content="कार्यदिनसूचना Attendance  jibble - आमन्त्रणम् प्रेषयिष्यते। app तन्त्रांशो ऽपि वर्तते। प्रतिहोरम् इयद् इति कालमानेन वेतनं निश्चिनुमः प्रतिमासम्।  कार्यवेला/ Work days  साधारणापेक्षा - सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।  विरामदिनानि (अवर्तमान-व्यवस्था)/ Paid leaves (Inactive policy)  सप्ताहे २ दिनय् इति मानेन सप्ताहान्तदिनानि सङ्गृह्य युगपदेव विरामदिनानि भोक्तुं शक्यते (अनेन &#43;एकादश्यादिव्रताचरणे ग्रामयात्रायाञ्च सौकर्यं स्यादिति धीः)। किञ्च, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। एतदन्तरा प्रतिमासं दिनमेकम् इति मानेन विरामदिनानि लभ्यन्ते। तानि सङ्गृह्य भोक्तुं शक्यम्। अथवा धनाय विक्रेतुम् अपि शक्यम्। किन्तु, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। भुज्यमानेषु सङ्गृहीत-विरामदिनेषु प्राक्सूचना देया, विपत्रेण चानुज्ञा लब्धव्या। एतदन्तरा &#43;एतेषूत्सवदिनेषु सप्ताहान्तादन्तरा वर्तमानेषु विरामदिनानि दीयन्ते, प्रत्युत्सवम् एकम् इति मानेन - दीपावलिः, नवरात्रि, गणेशोत्सवः। अन्येषूत्सवेषु विरामिदिनानि यथापेक्षं गृह्याणि - यतो जने जने प्रियोत्सवो भिन्नः।  ">
 
-<meta itemprop="wordCount" content="115">
+<meta itemprop="wordCount" content="127">
 
 
 
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="विरामदिनानि"/>
-<meta name="twitter:description" content="कार्यदिनसूचना Attendance  jibble - आमन्त्रणम् प्रेषयिष्यते। app तन्त्रांशो ऽपि वर्तते।  कार्यवेला/ Work days  सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।  विरामदिनानि/ Paid leaves  सप्ताहे २ दिनय् इति मानेन सप्ताहान्तदिनानि सङ्गृह्य युगपदेव विरामदिनानि भोक्तुं शक्यते (अनेन &#43;एकादश्यादिव्रताचरणे ग्रामयात्रायाञ्च सौकर्यं स्यादिति धीः)। किञ्च, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। एतदन्तरा प्रतिमासं दिनमेकम् इति मानेन विरामदिनानि लभ्यन्ते। तानि सङ्गृह्य भोक्तुं शक्यम्। अथवा धनाय विक्रेतुम् अपि शक्यम्। किन्तु, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। भुज्यमानेषु सङ्गृहीत-विरामदिनेषु प्राक्सूचना देया, विपत्रेण चानुज्ञा लब्धव्या। एतदन्तरा &#43;एतेषूत्सवदिनेषु सप्ताहान्तादन्तरा वर्तमानेषु विरामदिनानि दीयन्ते, प्रत्युत्सवम् एकम् इति मानेन - दीपावलिः, नवरात्रि, गणेशोत्सवः। अन्येषूत्सवेषु विरामिदिनानि यथापेक्षं गृह्याणि - यतो जने जने प्रियोत्सवो भिन्नः।  "/>
+<meta name="twitter:description" content="कार्यदिनसूचना Attendance  jibble - आमन्त्रणम् प्रेषयिष्यते। app तन्त्रांशो ऽपि वर्तते। प्रतिहोरम् इयद् इति कालमानेन वेतनं निश्चिनुमः प्रतिमासम्।  कार्यवेला/ Work days  साधारणापेक्षा - सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।  विरामदिनानि (अवर्तमान-व्यवस्था)/ Paid leaves (Inactive policy)  सप्ताहे २ दिनय् इति मानेन सप्ताहान्तदिनानि सङ्गृह्य युगपदेव विरामदिनानि भोक्तुं शक्यते (अनेन &#43;एकादश्यादिव्रताचरणे ग्रामयात्रायाञ्च सौकर्यं स्यादिति धीः)। किञ्च, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। एतदन्तरा प्रतिमासं दिनमेकम् इति मानेन विरामदिनानि लभ्यन्ते। तानि सङ्गृह्य भोक्तुं शक्यम्। अथवा धनाय विक्रेतुम् अपि शक्यम्। किन्तु, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्। भुज्यमानेषु सङ्गृहीत-विरामदिनेषु प्राक्सूचना देया, विपत्रेण चानुज्ञा लब्धव्या। एतदन्तरा &#43;एतेषूत्सवदिनेषु सप्ताहान्तादन्तरा वर्तमानेषु विरामदिनानि दीयन्ते, प्रत्युत्सवम् एकम् इति मानेन - दीपावलिः, नवरात्रि, गणेशोत्सवः। अन्येषूत्सवेषु विरामिदिनानि यथापेक्षं गृह्याणि - यतो जने जने प्रियोत्सवो भिन्नः।  "/>
 
       
     
@@ -185,12 +185,13 @@
   <h2 id="करयदनसचन-attendance">कार्यदिनसूचना Attendance</h2>
 <ul>
 <li>jibble - आमन्त्रणम् प्रेषयिष्यते। app तन्त्रांशो ऽपि वर्तते।</li>
+<li>प्रतिहोरम् इयद् इति कालमानेन वेतनं निश्चिनुमः प्रतिमासम्।</li>
 </ul>
 <h2 id="करयवल-work-days">कार्यवेला/ Work days</h2>
 <ul>
-<li>सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।</li>
+<li>साधारणापेक्षा - सप्ताहे ५ दिनानीति मानेन कार्यदिनानि स्युः। दिने च ८ होराणां कार्यवेला।</li>
 </ul>
-<h2 id="वरमदनन-paid-leaves">विरामदिनानि/ Paid leaves</h2>
+<h2 id="वरमदनन-अवरतमन-वयवसथ-paid-leaves-inactive-policy">विरामदिनानि (अवर्तमान-व्यवस्था)/ Paid leaves (Inactive policy)</h2>
 <ul>
 <li>सप्ताहे २ दिनय् इति मानेन सप्ताहान्तदिनानि सङ्गृह्य युगपदेव विरामदिनानि भोक्तुं शक्यते (अनेन +एकादश्यादिव्रताचरणे ग्रामयात्रायाञ्च सौकर्यं स्यादिति धीः)। किञ्च, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्।</li>
 <li>एतदन्तरा प्रतिमासं दिनमेकम् इति मानेन विरामदिनानि लभ्यन्ते। तानि सङ्गृह्य भोक्तुं शक्यम्। अथवा धनाय विक्रेतुम् अपि शक्यम्। किन्तु, विशिष्टानुज्ञां विना ८ एव दिनानि तादृशानि सङ्गृहीतुं शक्यानि - न ततोऽधिकम्।</li>
@@ -236,7 +237,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Apr 4 03:34:40 UTC. (<a href="http://google.com/search?q=03%3a34%3a40%20UTC to IST">IST</a>)
+      Built on 2021 Apr 4 04:23:01 UTC. (<a href="http://google.com/search?q=04%3a23%3a01%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
