--- a/groups/dyuganga/contact/index.html
+++ b/groups/dyuganga/contact/index.html
@@ -19,20 +19,20 @@
     <link href="/groups/dyuganga/contact/" rel="feed" type="application/rss+xml" title="संस्कृतजालक्षेत्रम्" />
 
     <meta property="og:title" content="Contact सम्पर्कः" />
-<meta property="og:description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   " />
+<meta property="og:description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups/ email https://groups.google.com/g/dyuganga. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/dyuganga/contact/" />
 
 <meta itemprop="name" content="Contact सम्पर्कः">
-<meta itemprop="description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   ">
+<meta itemprop="description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups/ email https://groups.google.com/g/dyuganga. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   ">
 
-<meta itemprop="wordCount" content="49">
+<meta itemprop="wordCount" content="50">
 
 
 
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Contact सम्पर्कः"/>
-<meta name="twitter:description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups here. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   "/>
+<meta name="twitter:description" content=" Short URL: https://rebrand.ly/dyugangA Please contact Vishvas / विश्वासो वासुकिजः for more info. Especially, please see Dharma via Vishvas page.  Social web (Updates and sponsorship opportunities)  Google groups/ email https://groups.google.com/g/dyuganga. द्युगङ्गा-कार्यगणस्य वार्ता अत्र । Twitter: https://twitter.com/dyugangaa Facebook: https://www.facebook.com/dyugangA Telegram supporters channel: https://t.me/dyugangA_supporters  Geo  We are located in C Block, sahakAra nagara.   "/>
 
       
     
@@ -188,7 +188,7 @@
 </ul>
 <h2 id="social-web-updates-and-sponsorship-opportunities">Social web (Updates and sponsorship opportunities)</h2>
 <ul>
-<li>Google groups <a href="https://groups.google.com/forum/#!forum/dyuganga">here</a>. द्युगङ्गा-कार्यगणस्य वार्ता <a href="https://groups.google.com/forum/#!forum/dyuganga">अत्र</a> ।</li>
+<li>Google groups/ email <a href="https://groups.google.com/forum/#!forum/dyuganga">https://groups.google.com/g/dyuganga</a>. द्युगङ्गा-कार्यगणस्य वार्ता <a href="https://groups.google.com/forum/#!forum/dyuganga">अत्र</a> ।</li>
 <li>Twitter: <a href="https://twitter.com/dyugangaa">https://twitter.com/dyugangaa</a></li>
 <li>Facebook: <a href="https://www.facebook.com/dyugangA">https://www.facebook.com/dyugangA</a></li>
 <li>Telegram supporters channel: <a href="https://t.me/dyugangA_supporters">https://t.me/dyugangA_supporters</a></li>
@@ -235,7 +235,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 Apr 21 03:57:24 UTC. (<a href="http://google.com/search?q=03%3a57%3a24%20UTC to IST">IST</a>)
+      Built on 2021 Apr 24 07:03:35 UTC. (<a href="http://google.com/search?q=07%3a03%3a35%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
