--- a/groups/matturu/contribute/veda-shaalaa/index.html
+++ b/groups/matturu/contribute/veda-shaalaa/index.html
@@ -71,6 +71,8 @@ Research and publication The talent of the village is capable serious research a
     <script src="/webpack_dist/transliteration-bundle.js"></script>
     <script src="/non_webpack_js/disqus.js"></script>
     <script src="/webpack_dist/ui_lib-bundle.js"></script>
+    <script src="/webpack_dist/search-bundle.js"></script>
+
     <link rel="stylesheet" href="/css/fonts.css">
     <link rel="stylesheet" href="/css/@fortawesome/fontawesome-free/css/solid.min.css">
     
@@ -114,10 +116,7 @@ Research and publication The talent of the village is capable serious research a
           </a>
         </div>
         <div id="div_top_bar_right" class="col-md-auto d-flex justify-content-center">
-          <form action="/search">
-            <input id="titleSearchInputBox" placeholder="शीर्षिकान्विष्यताम्" name="s"><i class="btn fas fa-search "></i>
-          </form>
-          <a href="/custom_site_search/"  class="btn btn-default">Full search</a>
+          ✍
           <select name="transliterationDropdown" size="1" onchange="module_transliteration.updateTransliteration()">
             <option value="devanagari" selected="">स</option>
             <option value="iast">ā</option>
@@ -139,8 +138,14 @@ Research and publication The talent of the village is capable serious research a
             <option value="modi">𑘦𑘻𑘚𑘲</option>
             <option value="tirhuta_maithili">𑒁</option>
           </select>
+          🗨:
+          <select name="commentStyleDropdown" size="1" onchange="module_main.default.updateCommentStyleFromDropdown()">
+            <option value="on">✔</option>
+            <option value="hidden">✗</option>
+          </select>
         </div>
         <div class="row col  d-flex justify-content-center">
+          <a href="full_search"  class="btn btn-secondary">🥽🔦</a>
           <div><a  name="previousPage" href="" class="btn btn-secondary">###<i class="fas fa-caret-left"></i></a></div>
           <div ><a name="nextPage" href="" class="btn btn-secondary"><i class="fas fa-caret-right"></i> ### </a></div>
         </div>
@@ -154,7 +159,10 @@ Research and publication The talent of the village is capable serious research a
     <div class="row" name="contentRow">
       
       <aside class="col-md-3 card border " id="sidebar">
-        <div id="sidebarTitle" class="card-title bg-light-gray border d-flex justify-content-between" >
+          <div id="fastSearch">
+              <input id="searchInput" placeholder="शीर्षिकान्विष्यताम्"  tabindex="0">
+          </div>
+          <div id="sidebarTitle" class="card-title bg-light-gray border d-flex justify-content-between" >
           <a name="sidebarToggleLink" data-toggle="collapse" href="#sidebar_body" role="button" aria-expanded="true" aria-controls="sidebar_body" onclick="module_main.default.sidebarToggleHandler()">
             Menu <i class="fas fa-caret-down"></i></a>
         </div>
@@ -260,7 +268,7 @@ Research and publication The talent of the village is capable serious research a
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 May 13 08:17:17 UTC. (<a href="http://google.com/search?q=08%3a17%3a17%20UTC to IST">IST</a>)
+      Built on 2021 May 14 14:17:43 UTC. (<a href="http://google.com/search?q=14%3a17%3a43%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
