deploy: e102fd844ca6c0b442e0ea10f034e07692baaf79

--- a/groups/padyadhaaraa/index.html
+++ b/groups/padyadhaaraa/index.html
@@ -19,19 +19,37 @@
     <link href="/groups/padyadhaaraa/" rel="feed" type="application/rss+xml" title="संस्कृतजालक्षेत्रम्" />
 
     <meta property="og:title" content="पद्यधारा" />
-<meta property="og:description" content="परिचयः  अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र। Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र। whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र। संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)  छन्दः  छन्दःपरिचयः -  शतावधानिनो गणेशस्य छन्दःपरिचयः आङ्ग्लिक-चलच्चित्रेण। रामप्रियालेखः आङ्ग्लिकेन (४२तमं पृष्ठं दृश्यताम्)। Advaita-academy video.   लक्षणग्रन्था दृश्यन्ताम् अत्र सङ्गृहीतानि। छन्दःपरीक्षणयन्त्रम् अत्र एवम् अत्र। छन्दसस् त्यागस्य खण्डनम् - अत्र।  चित्रकाव्यानि  शङ्करपरिचयः। भाषान्तरेषु  आङ्ग्लिके ऽत्र।    वृत्तोच्चारणविधिः  शिष्टैः - गणेशः, रमाकान्तः। Jan Brzezinski (जगदानन्ददासस्य) अत्र। विश्वासेन । अर्धसमावैतालीयम्।  काव्यार्थः अर्थालङ्कारः  लक्षणग्रन्था दृश्यन्ताम् अत्र सङ्गृहीतानि। कन्नडभाषया अर्थालङ्कारपरिचयः।  काव्यदोष-गुण-कलनम्, व्यङ्ग्यार्थादौ परिचयश् च।  &ldquo;को वा काव्यस्य आत्मा?" />
+<meta property="og:description" content="परिचयः   अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र।
+  Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र।
+  whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र।
+  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)
+  छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् अत्र सूचितम्।
+  संबद्धक्षेत्राणि अन्यपद्याभ्यासस्थानानि - पद्यपानम्।
+पद्यप्रकाशनमार्गाः  प्राचीप्रज्ञायां काव्यधारा। विध्युद्दूतो ऽन्तर्जालपत्रिका। (प्रकाशकेभ्यः उत्तरं न प्राप्तम्।) पद्यचौर्ये प्राचीना इह।  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://sanskrit.github.io/groups/padyadhaaraa/" /><meta property="article:section" content="groups" />
 
 
 
 <meta itemprop="name" content="पद्यधारा">
-<meta itemprop="description" content="परिचयः  अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र। Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र। whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र। संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)  छन्दः  छन्दःपरिचयः -  शतावधानिनो गणेशस्य छन्दःपरिचयः आङ्ग्लिक-चलच्चित्रेण। रामप्रियालेखः आङ्ग्लिकेन (४२तमं पृष्ठं दृश्यताम्)। Advaita-academy video.   लक्षणग्रन्था दृश्यन्ताम् अत्र सङ्गृहीतानि। छन्दःपरीक्षणयन्त्रम् अत्र एवम् अत्र। छन्दसस् त्यागस्य खण्डनम् - अत्र।  चित्रकाव्यानि  शङ्करपरिचयः। भाषान्तरेषु  आङ्ग्लिके ऽत्र।    वृत्तोच्चारणविधिः  शिष्टैः - गणेशः, रमाकान्तः। Jan Brzezinski (जगदानन्ददासस्य) अत्र। विश्वासेन । अर्धसमावैतालीयम्।  काव्यार्थः अर्थालङ्कारः  लक्षणग्रन्था दृश्यन्ताम् अत्र सङ्गृहीतानि। कन्नडभाषया अर्थालङ्कारपरिचयः।  काव्यदोष-गुण-कलनम्, व्यङ्ग्यार्थादौ परिचयश् च।  &ldquo;को वा काव्यस्य आत्मा?">
+<meta itemprop="description" content="परिचयः   अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र।
+  Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र।
+  whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र।
+  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)
+  छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् अत्र सूचितम्।
+  संबद्धक्षेत्राणि अन्यपद्याभ्यासस्थानानि - पद्यपानम्।
+पद्यप्रकाशनमार्गाः  प्राचीप्रज्ञायां काव्यधारा। विध्युद्दूतो ऽन्तर्जालपत्रिका। (प्रकाशकेभ्यः उत्तरं न प्राप्तम्।) पद्यचौर्ये प्राचीना इह।  ">
 
-<meta itemprop="wordCount" content="158">
+<meta itemprop="wordCount" content="46">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="पद्यधारा"/>
-<meta name="twitter:description" content="परिचयः  अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र। Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र। whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र। संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)  छन्दः  छन्दःपरिचयः -  शतावधानिनो गणेशस्य छन्दःपरिचयः आङ्ग्लिक-चलच्चित्रेण। रामप्रियालेखः आङ्ग्लिकेन (४२तमं पृष्ठं दृश्यताम्)। Advaita-academy video.   लक्षणग्रन्था दृश्यन्ताम् अत्र सङ्गृहीतानि। छन्दःपरीक्षणयन्त्रम् अत्र एवम् अत्र। छन्दसस् त्यागस्य खण्डनम् - अत्र।  चित्रकाव्यानि  शङ्करपरिचयः। भाषान्तरेषु  आङ्ग्लिके ऽत्र।    वृत्तोच्चारणविधिः  शिष्टैः - गणेशः, रमाकान्तः। Jan Brzezinski (जगदानन्ददासस्य) अत्र। विश्वासेन । अर्धसमावैतालीयम्।  काव्यार्थः अर्थालङ्कारः  लक्षणग्रन्था दृश्यन्ताम् अत्र सङ्गृहीतानि। कन्नडभाषया अर्थालङ्कारपरिचयः।  काव्यदोष-गुण-कलनम्, व्यङ्ग्यार्थादौ परिचयश् च।  &ldquo;को वा काव्यस्य आत्मा?"/>
+<meta name="twitter:description" content="परिचयः   अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र।
+  Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र।
+  whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र।
+  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)
+  छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् अत्र सूचितम्।
+  संबद्धक्षेत्राणि अन्यपद्याभ्यासस्थानानि - पद्यपानम्।
+पद्यप्रकाशनमार्गाः  प्राचीप्रज्ञायां काव्यधारा। विध्युद्दूतो ऽन्तर्जालपत्रिका। (प्रकाशकेभ्यः उत्तरं न प्राप्तम्।) पद्यचौर्ये प्राचीना इह।  "/>
 
       
     
@@ -192,59 +210,21 @@
   <div id="post_content">
   <h2 id="परचय">परिचयः</h2>
 <ul>
-<li>अस्माकं‌ <a href="https://groups.google.com/forum/#!forum/padyadhaaraa">विपत्त्रधारिणीम्</a> ईक्षताम् अत्र।</li>
-<li>Facebook मुखपुस्तके &ldquo;<a href="https://www.facebook.com/groups/padyadhaaraa">कवयो वयममी</a>&rdquo; :-)। गद्यकाव्य-विभागो <a href="https://www.facebook.com/groups/gadyadhaaraa/">ऽत्र</a>।</li>
-<li>whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् <a href="https://chat.whatsapp.com/1aWrHDRwAGCAcWHvNmc65G">अत्र</a>।</li>
-<li>संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)</li>
-</ul>
-<h2 id="छनद">छन्दः</h2>
-<ul>
-<li>छन्दःपरिचयः -
-<ul>
-<li>शतावधानिनो <a href="http://www.youtube.com/watch?v=vO9mRinm2tc">गणेशस्य छन्दःपरिचयः</a> आङ्ग्लिक-चलच्चित्रेण।</li>
-<li><a href="https://docs.google.com/file/d/0Bxc_Vgxp0P2RVVRHUEp1bDRvTWM/edit">रामप्रियालेखः</a> आङ्ग्लिकेन (४२तमं पृष्ठं दृश्यताम्)। Advaita-academy <a href="https://www.youtube.com/watch?v=MObTO26u08U">vid</a>eo.</li>
-</ul>
+<li>
+<p>अस्माकं‌ <a href="https://groups.google.com/forum/#!forum/padyadhaaraa">विपत्त्रधारिणीम्</a> ईक्षताम् अत्र।</p>
 </li>
-<li>लक्षणग्रन्था दृश्यन्ताम् <a href="https://docs.google.com/spreadsheets/d/1YTU1e2CIeUXqsu06z_pfugpt3lkMeXeZLbLauOtksCQ/edit#gid=1755855185">अत्र</a> सङ्गृहीतानि।</li>
-<li>छन्दःपरीक्षणयन्त्रम् <a href="http://sanskritnlp.appspot.com/forms/Chandas-de.htm">अत्र</a> एवम् <a href="http://1d.sanskritmetres.appspot.com">अत्र</a>।</li>
-<li>छन्दसस् त्यागस्य खण्डनम् - <a href="http://www.online-literature.com/pg-wodehouse/4328/">अत्र</a>।</li>
-</ul>
-<h3 id="चतरकवयन">चित्रकाव्यानि</h3>
-<ul>
-<li><a href="https://www.youtube.com/watch?v=hqhw_Z8mL5A&amp;feature=em-uploademail">शङ्करपरिचयः</a>।</li>
-<li>भाषान्तरेषु
-<ul>
-<li>आङ्ग्लिके <a href="https://twitter.com/christianbok/status/804823169643081729">ऽत्र</a>।</li>
-</ul>
+<li>
+<p>Facebook मुखपुस्तके &ldquo;<a href="https://www.facebook.com/groups/padyadhaaraa">कवयो वयममी</a>&rdquo; :-)। गद्यकाव्य-विभागो <a href="https://www.facebook.com/groups/gadyadhaaraa/">ऽत्र</a>।</p>
 </li>
-</ul>
-<h3 id="वततचचरणवध">वृत्तोच्चारणविधिः</h3>
-<ul>
-<li>शिष्टैः - <a href="http://www.youtube.com/playlist?list=PLABJEFgj0PWVXr2ERGu2xtoSXrNdBs5xS">गणेशः</a>, <a href="http://www.youtube.com/watch?v=2X6GcE5Seg0">रमाकान्तः</a>।</li>
-<li>Jan Brzezinski (जगदानन्ददासस्य) <a href="https://soundcloud.com/jagadananda-das-168494194/sets/chanting-sanskrit-verses">अत्र</a>।</li>
-<li><a href="https://www.youtube.com/results?search_query=%E0%A4%B5%E0%A5%83%E0%A4%A4%E0%A5%8D%E0%A4%A4%E0%A5%8B%E0%A4%9A%E0%A5%8D%E0%A4%9A%E0%A4%BE%E0%A4%B0%E0%A4%A3%E0%A4%82+%E0%A4%B5%E0%A4%BF%E0%A4%B6%E0%A5%8D%E0%A4%B5%E0%A4%BE%E0%A4%B8%E0%A5%87%E0%A4%A8&amp;lclk=playlist&amp;filters=playlist">विश्वासेन </a>। <a href="https://www.youtube.com/playlist?list=PL63uIhJxWbggSaSwpWlNyD-1ha_pYwSWa">अर्धसमावैतालीयम्</a>।</li>
-</ul>
-<h2 id="कवयरथ">काव्यार्थः</h2>
-<h3 id="अरथलङकर">अर्थालङ्कारः</h3>
-<ul>
-<li>लक्षणग्रन्था दृश्यन्ताम् <a href="https://docs.google.com/spreadsheets/d/1YTU1e2CIeUXqsu06z_pfugpt3lkMeXeZLbLauOtksCQ/edit#gid=1755855185">अत्र</a> सङ्गृहीतानि।</li>
-<li>कन्नडभाषया <a href="http://www.youtube.com/watch?v=QGn0RVLNMnw&amp;list=PL63uIhJxWbgg78XWEXOG8OVvl_DuIJs20&amp;index=1">अर्थालङ्कारपरिचयः</a>।</li>
-</ul>
-<h3 id="कवयदष-गण-कलनम-वयङगयरथद-परचयश-च">काव्यदोष-गुण-कलनम्, व्यङ्ग्यार्थादौ परिचयश् च।</h3>
-<ul>
-<li>&ldquo;को वा काव्यस्य आत्मा? गुणो वा? रीतिर् वा? ध्वनिर् वा? वक्रोक्तिर् वा? चमत्कारो वा? किं नाम उत्तमकाव्यम्?&rdquo; इत्यादौ प्राचीनचर्चायां नागराजरावः - <a href="https://archive.org/details/kAvyasya-AtmA">अत्र</a>।</li>
-<li>नाट्यशास्त्रे परिचयः गणेशावधानिना आङ्ग्लिके - <a href="https://archive.org/details/Natya-shastraLecture-ShatavadhaniRGanesh">अत्र</a>।</li>
-<li>औचित्यम्
-<ul>
-<li>“कण्ठे मेखलया नितम्बफलके तारेण हारेण वा पाणौ नूपुरबन्धनेन चरणे केयुरपाशेन वा । शौर्येण प्रणते रिपौ करुणया नायान्ति के हास्यता मौचित्येन विना रुचिं प्रतनुते नालंकृतिर्नो गुणाः ” ।।-इति (औचित्यविचारचर्चा) </li>
-</ul>
+<li>
+<p>whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् <a href="https://chat.whatsapp.com/1aWrHDRwAGCAcWHvNmc65G">अत्र</a>।</p>
 </li>
-</ul>
-<h2 id="सहतय-अवधनकल">साहित्य-अवधानकला</h2>
-<ul>
-<li>गणेशविवरणम् <a href="https://www.youtube.com/watch?v=OCo5aJOUJTY&amp;list=PLZ83joYJYmWTu1xPhJiTxIutngTfo5NNW">आङ्ग्लिकेन</a>।</li>
-<li>youtube <a href="https://www.youtube.com/playlist?list=PL63uIhJxWbggzaQ4H7Ofp348jzCq67Sfj">धारा</a>।</li>
-<li><a href="https://archive.org/details/KAvyaAvadhAnaQA2">Q&amp;A</a>.</li>
+<li>
+<p>संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)</p>
+</li>
+<li>
+<p>छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् <a href="http://vvasuki.github.io/kAvyam/shAstram/ChandaH">अत्र</a> सूचितम्।</p>
+</li>
 </ul>
 <h2 id="सबदधकषतरण">संबद्धक्षेत्राणि</h2>
 <p>अन्यपद्याभ्यासस्थानानि - <a href="http://padyapaana.com/">पद्यपानम्</a>।</p>
@@ -293,7 +273,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 May 18 11:35:56 UTC. (<a href="http://google.com/search?q=11%3a35%3a56%20UTC to IST">IST</a>)
+      Built on 2021 May 21 01:56:01 UTC. (<a href="http://google.com/search?q=01%3a56%3a01%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
