deploy: 526189419707962f99fc4e17b8e7c567edc1d587

--- a/groups/padyadhaaraa/index.html
+++ b/groups/padyadhaaraa/index.html
@@ -22,7 +22,7 @@
 <meta property="og:description" content="परिचयः   अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र।
   Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र।
   whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र।
-  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)
+  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्।
   छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् अत्र सूचितम्।
   संबद्धक्षेत्राणि अन्यपद्याभ्यासस्थानानि - पद्यपानम्।
 पद्यप्रकाशनमार्गाः  प्राचीप्रज्ञायां काव्यधारा। विध्युद्दूतो ऽन्तर्जालपत्रिका। (प्रकाशकेभ्यः उत्तरं न प्राप्तम्।) पद्यचौर्ये प्राचीना इह।  " />
@@ -35,18 +35,18 @@
 <meta itemprop="description" content="परिचयः   अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र।
   Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र।
   whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र।
-  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)
+  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्।
   छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् अत्र सूचितम्।
   संबद्धक्षेत्राणि अन्यपद्याभ्यासस्थानानि - पद्यपानम्।
 पद्यप्रकाशनमार्गाः  प्राचीप्रज्ञायां काव्यधारा। विध्युद्दूतो ऽन्तर्जालपत्रिका। (प्रकाशकेभ्यः उत्तरं न प्राप्तम्।) पद्यचौर्ये प्राचीना इह।  ">
 
-<meta itemprop="wordCount" content="46">
+<meta itemprop="wordCount" content="43">
 <meta itemprop="keywords" content="" /><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="पद्यधारा"/>
 <meta name="twitter:description" content="परिचयः   अस्माकं‌ विपत्त्रधारिणीम् ईक्षताम् अत्र।
   Facebook मुखपुस्तके &ldquo;कवयो वयममी&rdquo; :-)। गद्यकाव्य-विभागो ऽत्र।
   whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् अत्र।
-  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)
+  संस्कृतपद्यं नाम छन्दोबद्धं स्यात्।
   छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् अत्र सूचितम्।
   संबद्धक्षेत्राणि अन्यपद्याभ्यासस्थानानि - पद्यपानम्।
 पद्यप्रकाशनमार्गाः  प्राचीप्रज्ञायां काव्यधारा। विध्युद्दूतो ऽन्तर्जालपत्रिका। (प्रकाशकेभ्यः उत्तरं न प्राप्तम्।) पद्यचौर्ये प्राचीना इह।  "/>
@@ -159,6 +159,7 @@
             <option value="on">✔</option>
             <option value="hidden">✗</option>
           </select>
+          <div><a  name="speakerButton" class="btn btn-secondary" onclick="module_main.default.handleSpeakToggle()">🎧️</a></div>
         </div>
         <div class="row col  d-flex justify-content-center">
           <a href="full_search"  class="btn btn-secondary">🥽🔦</a>
@@ -220,7 +221,7 @@
 <p>whatsapp-तन्त्रांशे सरस-छन्दोभाषणम्? प्रविश्यताम् <a href="https://chat.whatsapp.com/1aWrHDRwAGCAcWHvNmc65G">अत्र</a>।</p>
 </li>
 <li>
-<p>संस्कृतपद्यं नाम छन्दोबद्धं स्यात्। (अधः‌ विशिष्टवर्णयुक्तपदान् नुदेत्।)</p>
+<p>संस्कृतपद्यं नाम छन्दोबद्धं स्यात्।</p>
 </li>
 <li>
 <p>छन्दसः परिचयः, अपेक्षा, परीक्षणयन्त्राणि इत्यादिकम् <a href="http://vvasuki.github.io/kAvyam/shAstram/ChandaH">अत्र</a> सूचितम्।</p>
@@ -273,7 +274,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 May 21 01:56:01 UTC. (<a href="http://google.com/search?q=01%3a56%3a01%20UTC to IST">IST</a>)
+      Built on 2021 May 30 08:08:36 UTC. (<a href="http://google.com/search?q=08%3a08%3a36%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
