--- a/groups/matturu/contribute/index.html
+++ b/groups/matturu/contribute/index.html
@@ -136,6 +136,7 @@
             <option value="on">✔</option>
             <option value="hidden">✗</option>
           </select>
+          <div><a  name="speakerButton" class="btn btn-secondary" onclick="module_main.default.handleSpeakToggle()">🎧️</a></div>
         </div>
         <div class="row col  d-flex justify-content-center">
           <a href="full_search"  class="btn btn-secondary">🥽🔦</a>
@@ -284,7 +285,7 @@
     </a>
     <a class="btn btn-secondary" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
     <div class="btn small border">
-      Built on 2021 May 21 01:56:01 UTC. (<a href="http://google.com/search?q=01%3a56%3a01%20UTC to IST">IST</a>)
+      Built on 2021 May 30 08:08:36 UTC. (<a href="http://google.com/search?q=08%3a08%3a36%20UTC to IST">IST</a>)
     </div>
   <ul id="footer-bar-right-custom" class="list-group list-group-horizontal">
   </ul>
